--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script src="https://unpkg.com/react-modal/dist/react-modal.min.js"></script> -->
+
   </body>
 </html>
